--- a/CSS/_contacto.scss
+++ b/CSS/_contacto.scss
@@ -1,3 +1,6 @@
+$colorbody: rgb(201, 193, 193);
+$colorheader: black;
+$color-nav-y-footer: gray;
 
 // header
 header{
@@ -52,7 +55,7 @@ nav{
 //body
 
 body{
-    background-color: gray;
+    background-color: $colorbody;
 }
 
 //footer
