--- a/CSS/_contacto.scss
+++ b/CSS/_contacto.scss
@@ -1,6 +1,13 @@
 $colorbody: rgb(201, 193, 193);
 $colorheader: black;
 $color-nav-y-footer: gray;
+$widht1: 550px;
+$widht2: 600px;
+$height1: 500px;
+$height2: 309px;
+$padding1: 50px;
+$tipo: 'Oswald', sans-serif;
+$titulos: 32px;
 
 // header
 header{
