Modifiqué el margen de la nota

--- a/CSS/_deportes.scss
+++ b/CSS/_deportes.scss
@@ -71,6 +71,7 @@ body{
     width: $widht2;
     height: $height1;
     font-family: $tipo;
+    margin: 2%;
     .foto__gimnasio{
         margin-top: 10%;
         width: $widht1;
