--- a/CSS/style.css
+++ b/CSS/style.css
@@ -301,6 +301,7 @@ body {
   width: 600px;
   height: 500px;
   font-family: "Oswald", sans-serif;
+  margin: 2%;
 }
 
 .nota__almagro .foto__gimnasio {
