Apliqué estilos en la nota y modifiqué la clase

--- a/CSS/_entrevistas.scss
+++ b/CSS/_entrevistas.scss
@@ -71,6 +71,7 @@ body{
     width: $widht2;
     height: $height1;
     font-family: $tipo;
+    margin: 2%;
     .foto__toscano{
         width: $widht1;
         height: $height2;
