Cree estilos e importé _tops

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -3,7 +3,7 @@
 @import "deportes";
 @import "entrevistas";
 @import "sociedad";
-
+@import "tops";
 
 $colorbody: rgb(201, 193, 193);
 $colorheader: black;
