Importé el _tecnología

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -4,6 +4,7 @@
 @import "entrevistas";
 @import "sociedad";
 @import "tops";
+@import "tecnologia";
 
 $colorbody: rgb(201, 193, 193);
 $colorheader: black;
