--- a/css/style.scss
+++ b/css/style.scss
@@ -121,81 +121,109 @@ nav{
     }
     .nota__toscano{
         background-image: url(pablotoscano.png);
-        opacity: 0.5;}
+        filter: grayscale(100%);
+        .card-img-overlay{
+            background-color: rgba(255, 255, 255, 0.5);
+        }
         .card-text{
             text-align: center;
             margin-top: 20%;
-            color: white;
+            color: black;
             font-family: 'Oswald', sans-serif;
         }
     }
     .nota__toscano:hover{
         opacity: 1;
         transition: 0.5s;
+        filter: grayscale(0%);
         .card-text{
             visibility: hidden;
             transition: 0s;
+        }
+        .card-img-overlay{
+            transition: 0s;
+            visibility: hidden;
         }
     }
     .nota__gardel{
         background-image: url(casa-gardel.png);
-        opacity: 0.5;}
+        filter: grayscale(100%);
+        .card-img-overlay{
+            background-color: rgba(255, 255, 255, 0.5);
+        }
         .card-text{
             text-align: center;
             margin-top: 20%;
-            color: white;
+            color: black;
             font-family: 'Oswald', sans-serif;
         }
+    }
     .nota__gardel:hover{
         opacity: 1;
         transition: 0.5s;
+        filter: grayscale(0%);
         .card-text{
             visibility: hidden;
             transition: 0s;
+        }
+        .card-img-overlay{
+            transition: 0s;
+            visibility: hidden;
         }
     }
     .nota__arsenico{
         background-image: url(carlos-casares.jpg);
-        opacity: 0.5;}
+        filter: grayscale(100%);
+        .card-img-overlay{
+            background-color: rgba(255, 255, 255, 0.5);
+        }
         .card-text{
             text-align: center;
             margin-top: 20%;
-            color: white;
+            color: black;
             font-family: 'Oswald', sans-serif;
         }
+    }
     .nota__arsenico:hover{
         opacity: 1;
         transition: 0.5s;
+        filter: grayscale(0%);
         .card-text{
             visibility: hidden;
             transition: 0s;
+        }
+        .card-img-overlay{
+            transition: 0s;
+            visibility: hidden;
         }
     }
     .nota__boxeo{
         background-image: url(almagro-boxing.png);
-        opacity: 0.5;}
+        filter: grayscale(100%);
+        .card-img-overlay{
+            background-color: rgba(255, 255, 255, 0.5);
+        }
         .card-text{
             text-align: center;
             margin-top: 20%;
-            color: white;
+            color: black;
             font-family: 'Oswald', sans-serif;
         }
+    }
     .nota__boxeo:hover{
         opacity: 1;
         transition: 0.5s;
+        filter: grayscale(0%);
         .card-text{
             visibility: hidden;
             transition: 0s;
         }
+        .card-img-overlay{
+            transition: 0s;
+            visibility: hidden;
+        }
     }
-    .nota__titulos{
-        font-size: 30px;
-        font-weight: 700;
-    }
-    .nota__texto{
-        font-size: 20px;
-    }
-
+}
 #whatsapp{
     display: flex;
     justify-content: right;
