--- a/css/style.css
+++ b/css/style.css
@@ -1165,6 +1165,48 @@ nav .barra__busqueda .boton__busqueda {
   visibility: hidden;
 }
 
+.grid .nota__siria {
+  background-image: url(guerra-siria.png);
+  -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  margin: 0 0;
+  border-style: none;
+}
+
+.grid .nota__siria .card-img-overlay {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+.grid .nota__siria .card-text {
+  text-align: center;
+  margin-top: 20%;
+  color: black;
+  font-family: 'Oswald', sans-serif;
+}
+
+.grid .nota__siria:hover {
+  opacity: 1;
+  -webkit-transition: 1s;
+  transition: 1s;
+  -webkit-filter: grayscale(0%);
+          filter: grayscale(0%);
+}
+
+.grid .nota__siria:hover .card-text {
+  visibility: hidden;
+  -webkit-transition: 0s;
+  transition: 0s;
+}
+
+.grid .nota__siria:hover .card-img-overlay {
+  -webkit-transition: 0s;
+  transition: 0s;
+  visibility: hidden;
+}
+
 footer {
   margin-top: 5%;
   display: -webkit-box;
