--- a/css/_sociedad.scss
+++ b/css/_sociedad.scss
@@ -68,14 +68,34 @@ body{
 //notas
 
 .nota__arsenico{
-    width: $widht2;
-    height: $height1;
-    font-family: $tipo;
-    margin: 2%;
-    .foto__casares{
-        margin-top: 10%;
-        width: $widht1;
-        height: $height2;
+    background-image: url(carlos-casares.jpg);
+    filter: grayscale(100%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    margin: 0 0;
+    border-style: none;
+    .card-img-overlay{
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+    .card-text{
+        text-align: center;
+        margin-top: 20%;
+        color: black;
+        font-family: 'Oswald', sans-serif;
+    }
+}
+.nota__arsenico:hover{
+    opacity: 1;
+    transition: 0.5s;
+    filter: grayscale(0%);
+    .card-text{
+        visibility: hidden;
+        transition: 0s;
+    }
+    .card-img-overlay{
+        transition: 0s;
+        visibility: hidden;
     }
 }
 
