--- a/css/style.css
+++ b/css/style.css
@@ -1149,10 +1149,16 @@ nav .barra__busqueda .boton__busqueda {
   width: 100%;
   margin: 0 0;
   border-style: none;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .grid .nota__arsenico .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .grid .nota__arsenico .card-text {
@@ -1191,10 +1197,16 @@ nav .barra__busqueda .boton__busqueda {
   width: 100%;
   margin: 0 0;
   border-style: none;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .grid .nota__boxeo .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .grid .nota__boxeo .card-text {
@@ -1233,10 +1245,16 @@ nav .barra__busqueda .boton__busqueda {
   width: 100%;
   margin: 0 0;
   border-style: none;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .grid .nota__tops .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .grid .nota__tops .card-text {
@@ -1275,10 +1293,16 @@ nav .barra__busqueda .boton__busqueda {
   width: 100%;
   margin: 0 0;
   border-style: none;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .grid .nota__siria .card-img-overlay {
   background-color: rgba(255, 255, 255, 0.5);
+  position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .grid .nota__siria .card-text {
