--- a/css/style.scss
+++ b/css/style.scss
@@ -190,8 +190,13 @@ nav{
         width: 100%;
         margin: 0 0;
         border-style: none;
+        height: 100%;
+        object-fit: cover;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
         .card-text{
             text-align: center;
@@ -222,8 +227,13 @@ nav{
         width: 100%;
         margin: 0 0;
         border-style: none;
+        height: 100%;
+        object-fit: cover;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
         .card-text{
             text-align: center;
@@ -254,8 +264,13 @@ nav{
         width: 100%;
         margin: 0 0;
         border-style: none;
+        height: 100%;
+        object-fit: cover;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
         .card-text{
             text-align: center;
@@ -286,8 +301,13 @@ nav{
         width: 100%;
         margin: 0 0;
         border-style: none;
+        height: 100%;
+        object-fit: cover;
         .card-img-overlay{
             background-color: rgba(255, 255, 255, 0.5);
+            position: relative;
+            width: 100%;
+            height: 100%;
         }
         .card-text{
             text-align: center;
