--- a/css/style.css
+++ b/css/style.css
@@ -938,53 +938,104 @@ header .logo__pagina {
   height: 500px;
 }
 
-nav {
-  background-color: gray;
-  width: 100%;
-  height: 105px;
+main {
+  display: block;
+}
+
+main .titulo {
+  font-family: "Oswald", sans-serif;
+  width: 624px;
+  margin-top: 2%;
+  margin-left: 20%;
+}
+
+main .foto {
+  margin-top: 2%;
+  margin-left: 20%;
+}
+
+main .epigrafe {
+  font-family: "Oswald", sans-serif;
+  width: 624px;
+  margin-top: 2%;
+  margin-left: 20%;
+}
+
+main .pregunta {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+  font-size: 1.5rem;
+  width: 624px;
+  margin-left: 20%;
+  line-height: 2em;
+}
+
+main .respuesta {
+  font-family: "Oswald", sans-serif;
+  font-size: 1rem;
+  width: 624px;
+  margin-left: 20%;
+  line-height: 2em;
+}
+
+main .trailer {
+  width: 30%;
+  margin-left: 20%;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+}
+
+body {
+  background-color: #c9c1c1;
+}
+
+header {
+  background-color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-nav .menu__nav {
-  padding: 20px;
-  margin: 30px;
-  bottom: 8px;
-  border: ridge;
-  border-color: white;
-  background-color: black;
-  color: white;
-  font-size: 18px;
-  font-family: 'Oswald', sans-serif;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  height: 500px;
+  width: 100%;
 }
 
-nav .menu__nav .menu__dropdown {
-  border: ridge;
-  border-color: white;
+header .logo__pagina {
+  height: 500px;
+}
+
+nav {
+  background-color: gray;
+  font-size: 20px;
+  display: inline-block;
+  z-index: 1;
+  height: 125px;
+}
+
+nav a {
+  color: black !important;
+}
+
+nav a:hover {
   background-color: black;
-  color: white;
-  font-size: 18px;
-  font-family: 'Oswald', sans-serif;
+  color: white !important;
 }
 
-nav .barra__busqueda {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-  font-family: 'Oswald', sans-serif;
+nav .menu {
+  margin-left: 3%;
 }
 
-nav .barra__busqueda .boton__busqueda {
-  border-color: black;
-  background-color: black;
-  color: white;
-  border-radius: .25rem;
+nav .dropdown-menu {
+  background-color: unset;
+  border: unset;
+  z-index: 1;
+}
+
+nav .dropdown-item:hover {
+  background-color: black !important;
+  color: white !important;
 }
 
 .slider__carrusel {
@@ -1054,6 +1105,10 @@ nav .barra__busqueda .boton__busqueda {
   -ms-grid-row: 2;
   -ms-grid-column: 3;
   grid-area: nota6;
+}
+
+.grid a {
+  text-decoration: none;
 }
 
 .grid .nota__toscano {
@@ -1339,6 +1394,7 @@ footer {
   display: flex;
   background-color: gray;
   height: 150px;
+  width: 100%;
 }
 
 footer .footloose {
