Le di estilos a nota-arsenico

--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@
 @import "tops";
 @import "tecnologia";
 @import "entrevista_toscano";
+@import "nota_arsenico";
 
 $colorbody: rgb(201, 193, 193);
 $colorheader: black;
