--- a/css/style.css
+++ b/css/style.css
@@ -999,6 +999,62 @@ header {
       -ms-flex-pack: center;
           justify-content: center;
   height: 500px;
+}
+
+header .logo__pagina {
+  height: 500px;
+}
+
+main {
+  display: block;
+}
+
+main .encabezado {
+  margin-top: 2%;
+  margin-left: 20%;
+}
+
+main .titulo {
+  font-family: "Oswald", sans-serif;
+  width: 624px;
+  margin-top: 2%;
+  margin-left: 20%;
+}
+
+main .foto-casares {
+  margin-left: 20%;
+}
+
+main .epigrafe {
+  font-family: "Oswald", sans-serif;
+  margin-left: 20%;
+}
+
+main .creditos {
+  font-family: "Oswald", sans-serif;
+  font-weight: bold;
+}
+
+main p {
+  font-family: "Oswald", sans-serif;
+  width: 624px;
+  margin-top: 2%;
+  margin-left: 20%;
+}
+
+body {
+  background-color: #c9c1c1;
+}
+
+header {
+  background-color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 500px;
   width: 100%;
 }
 
