Cambie el estilo de creditos

--- a/css/_nota_arsenico.scss
+++ b/css/_nota_arsenico.scss
@@ -43,7 +43,7 @@ main{
     }
     .creditos{
         font-family: $tipo;
-        font-weight: bold;
+        font-weight: 700;
     }
     p{
         font-family: $tipo;
