--- a/css/style.css
+++ b/css/style.css
@@ -961,6 +961,11 @@ main .epigrafe {
   margin-left: 20%;
 }
 
+main .creditos {
+  font-family: "Oswald", sans-serif;
+  font-weight: 700;
+}
+
 main .pregunta {
   font-family: "Oswald", sans-serif;
   font-weight: 700;
@@ -1032,7 +1037,7 @@ main .epigrafe {
 
 main .creditos {
   font-family: "Oswald", sans-serif;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 main p {
