--- a/css/_entrevista_toscano.scss
+++ b/css/_entrevista_toscano.scss
@@ -42,6 +42,10 @@ main{
         margin-top: 2%;
         margin-left: 20%;
     }
+    .creditos{
+        font-family: $tipo;
+        font-weight: 700;
+    }
     .pregunta{
         font-family: $tipo;
         font-weight: 700;
