--- a/css/style.scss
+++ b/css/style.scss
@@ -7,7 +7,7 @@
 @import "tecnologia";
 @import "entrevista_toscano";
 @import "nota_arsenico";
-@import "nota_gardel"
+@import "nota_gardel";
 
 $colorbody: rgb(201, 193, 193);
 $colorheader: black;
