Cambié el import de entrevista_toscano por notas

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,9 +5,7 @@
 @import "sociedad";
 @import "tops";
 @import "tecnologia";
-@import "entrevista_toscano";
-@import "nota_arsenico";
-@import "nota_boxeo";
+@import "notas";
 
 $colorbody: rgb(201, 193, 193);
 $colorheader: black;
