--- a/css/style.scss
+++ b/css/style.scss
@@ -35,6 +35,7 @@ header{
 nav{
     background-color: $color-nav-y-footer;
     font-size: 20px;
+    font-family: $tipo;
     display: inline-block;
     z-index: 1;
     height: 125px;
