Modifiqué algunas cosas de nota-tops

--- a/css/_notas.scss
+++ b/css/_notas.scss
@@ -63,3 +63,16 @@ main{
         margin-left: 20%;
     }
 }
+ol li{
+    font-family: $tipo;
+    margin-left: 20%;
+    p{
+        margin-left: 3% !important;
+    }
+    .foto{
+        margin-left: 3% !important;
+    }
+    h3{
+        margin-left: 3% !important;
+    }
+}
