--- a/css/_notas.scss
+++ b/css/_notas.scss
@@ -1,4 +1,7 @@
 $tipo: 'Oswald', sans-serif;
+@mixin margen-tops {
+    margin-left: 3% !important;
+}
 
 main{
     display: block;
@@ -66,13 +69,7 @@ main{
 ol li{
     font-family: $tipo;
     margin-left: 20%;
-    p{
-        margin-left: 3% !important;
-    }
-    .foto{
-        margin-left: 3% !important;
-    }
-    h3{
-        margin-left: 3% !important;
+    p, .foto, h3{
+        @include margen-tops;
     }
 }
